2007-09-08  Fredrik Axelsson  <f.axelsson@gmail.com>

	* window.c (prefer_window_split_horizontally): New variable.
	(display_buffer): Consider splitting window horizontally depending
	on prefer_window_split_horizontally.

2007-09-08  Eli Zaretskii  <eliz@gnu.org>

	* sysdep.c [WINDOWSNT]: Don't include sysselect.h

2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* s/cygwin.h (GC_MARK_STACK): Enable conservative stack marking.

	* frame.c (x_set_frame_parameters): Check number is positive before
	using XFASTINT.

	* window.c (freeze_window_start): Don't presume selected_window holds
	a window object.
	(Fdisplay_buffer): Remove `register' since `buffer' needs to be gcpro'd.

2007-09-07  Angelo Graziosi <Angelo.Graziosi@roma1.infn.it>  (tiny change)

	* term.c (dissociate_if_controlling_tty): Call setsid on CYGWIN.

2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.c (Vsplit_window_preferred_function): New var.
	(Fdisplay_buffer): Use it.
	(syms_of_window): Export, and initialize it.

2007-09-06  Pixel  <pixel@mandriva.com>  (tiny change)

	* image.c (gif_load): Fix bug: Handle nonexistent colormap.

2007-09-06  Glenn Morris  <rgm@gnu.org>

	* gtkutil.c (menu_grab_callback) <cnt>:
	* xselect.c (x_reply_selection_request) <cnt>: Move static
	variable to file scope.

2007-09-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (redisplay_internal): Make sure Elisp code always sees
	consistent values of selected_frame and selected_window.

2007-09-04  Jason Rumney  <jasonr@gnu.org>

	* w32console.c (initialize_w32_display): Zero unused hooks.

2007-09-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.c (Vsuspend_tty_functions, Vresume_tty_functions)
	(syms_of_term, Fsuspend_tty, Fresume_tty): Undo previous change.

2007-09-04  Jason Rumney  <jasonr@gnu.org>

	* term.c (init_tty) [WINDOWSNT]: Add hooks that are not accessible
	in w32console.c.  Set up input.  Remove XXX comments that have been
	confirmed as correct.
